<resources>
    <string name="app_name">PharmEasyRetail</string>

    <string name="internet">Please check your Internet Connection</string>
    <string name="timeout">Timeout error</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="read_more"><u>More</u></string>
    <string name="read_less">&#160;<u>
        less</u></string>
    <string name="server_error">Server Error</string>


    <!--//*** Google Map key-->

    <!-- <strsenderNamename="google_maps_key">AIzaSyDxO-cLqGemArsUCSrn_uIUn5FzTkds4u0</string>-->

    <!-- <strsenderNamename="google_maps_key">AIzaSyDxO-cLqGemArsUCSrn_uIUn5FzTkds4u0</string>-->
    <!--Key for Release-->

    <!--Key for Debug-->

    <!--sandeep sir account credentials-->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="app_logo">AppLogo</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="userid">User ID</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="using_otp">Using OTP</string>
    <string name="roboto_regular">roboto_regular.ttf</string>
    <string name="roboto_bold">roboto_bold.ttf</string>
    <string name="roboto_medium">roboto_medium.ttf</string>
    <string name="enter">Enter&#160;</string>
    <string name="enter_user_id">User ID</string>
    <string name="enter_password">Password</string>
    <string name="error_too_small_password">Password should be 6 characters long. </string>
    <string name="title_activity_books">BooksActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_pager">PagerActivity</string>
    <string name="title_support_activity">Support</string>
    <string name="select_date">Select Date</string>
    <string name="particular">Particular</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="openingBalance">Opening Balance</string>
    <string name="cashSale">Cash Sale</string>
    <string name="creditSale">Credit Sale</string>
    <string name="creditCardSale">Credit Card Sale</string>
    <string name="cashPurchase">Cash purcase</string>
    <string name="creditPurchase">Credit purcase</string>
    <string name="total">Total</string>
    <string name="closingBalance">Closing Balance</string>
    <string name="toDate">To</string>
    <string name="products">Products</string>
    <string name="quantity">QTY</string>
    <string name="patientName">Patient Name :</string>
    <string name="patientAddress">Address :</string>
    <string name="patientMobileNo">Mobile No :</string>
    <string name="patientGstNo">Patient GST No :</string>
    <string name="doctorName">Doctor Name :</string>
    <string name="doctorClinicAddress">Clinic Address :</string>
    <string name="doctorMobileNo">Mobile No :</string>
    <string name="totalUnits">Total Units :&#160;</string>
    <string name="totalAmount">Total Amt :&#160;</string>
    <string name="Amount">AMT</string>
    <string name="sortBy">Sort By</string>
    <string name="stock">STOCK</string>
    <string name="estimatedPrice">Estimated Price :&#160;</string>
    <string name="discount">Discount</string>
    <string name="title_activity_products">Product</string>
    <string name="search_hint">Search Products</string>
    <string name="menu_search">Search</string>
    <string name="netamt">Net Amt</string>
    <string name="transactionmode">Transation Mode</string>
    <string name="print">PRINT</string>
    <string name="save">SAVE</string>
    <string name="salePrice">Sale Price:</string>
    <string name="needSomeHelp">Need Some Help?</string>
    <string name="feelfreetext">Feel free to get in touch with us</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="home_delivery">Do you need Home Delivery</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <array name="spinnerArray">
        <item>Cash</item>
    </array>

    <string name="error_in_ip">Please enter valid IP address</string>
    <string name="norecordsfound">No Records Found</string>
    <string name="enteripaddress">Enter System IP Address \n e.g.172.16.100.221:35560</string>
    <string name="title_barcode_scanner_activity">Barcode Scanner</string>
    <string name="company">Company</string>
    <string name="supplier">Supplier</string>
    <string name="quantity_menu">Quantity</string>
    <string name="nobatchavailable">No batch available for this product.</string>
    <string name="enter_quantity">Please Enter Quantity</string>
    <string name="enter_quantity_message">Please enter at least one quantity.</string>
    <string name="total_with_rs">Total ₹</string>
    <string name="input_sale_quantity_message">Sale quantity should be less than or equal to stock value.</string>
    <string name="scanBarcodeForSale">Scan Barcode For Sale</string>
    <string name="product_already_exist">Product already exist in cartlist, please choose another product.</string>
    <string name="please_enter_patient_name">Please enter patient name.</string>
    <string name="please_enter_doctor_name">Please enter doctor name.</string>
    <string name="please_enter_patient_doctor_name">Please enter patient and doctor name.</string>
    <string name="please_select_atleast_single_product_quantity">Please select at least single product with single batch quantity.</string>

    <string name="dicountValidation">Discount percentage should not be greater than&#160;</string>
    <string name="amt">AMT</string>
    <integer name="mobileNumberLength">10</integer>


    <!--<string name="template_list">Template List</string>-->


    <!--/////////////////////DMS/////////////////////-->

    <!-- Strings related to login -->

    <!--********Tree view holder icon codes****************-->
</resources>
