<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/daybooklightgreycolor">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            >

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/userimage"
        android:layout_below="@+id/appbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/artwork"
        android:layout_marginTop="@dimen/dp48"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/needsomehelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/needSomeHelp"
        android:layout_below="@+id/userimage"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp30"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/sp19"
        android:textColor="@color/dayBookTextColor"/>

    <TextView
        android:id="@+id/feelfreetouch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feelfreetext"
        android:layout_below="@+id/needsomehelp"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp14"
        android:fontFamily="@font/roboto_medium"
        android:textSize="@dimen/sp15"
        android:textColor="@color/support_textcolor"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp28"
        android:layout_below="@+id/feelfreetouch"

       >

        <Button
            android:id="@+id/call"
            android:layout_width="@dimen/dp140"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dp32"
            android:layout_marginRight="@dimen/dp13"
            android:background="@color/support_textcolor"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/call"
            android:textColor="@color/white"
            android:textSize="@dimen/sp20" />

        <Button
            android:id="@+id/email"
            android:layout_width="@dimen/dp140"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp32"
            android:background="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/email"
            android:textColor="@color/support_textcolor"
            android:textSize="@dimen/sp20" />

    </RelativeLayout>

</RelativeLayout>