<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/menu_back"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/productButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableEnd="@drawable/sort"
            android:drawablePadding="@dimen/dp18"
            android:drawableRight="@drawable/sort"
            android:fontFamily="@font/roboto_medium"
            android:paddingEnd="@dimen/dp6"
            android:paddingStart="@dimen/dp6"
            android:text="@string/products"
            android:textAllCaps="false"
            android:textColor="@color/menu_color"
            android:textSize="@dimen/sp14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/dividercolor_billingdetails"
            android:paddingEnd="@dimen/dp32"
            android:paddingStart="@dimen/dp32"
            android:paddingRight="@dimen/dp32"
            android:paddingLeft="@dimen/dp30"
            android:text="Products"
            android:textColor="@color/dividercolor_billingdetails" />

        <Button
            android:id="@+id/companyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableEnd="@drawable/sort"
            android:drawablePadding="@dimen/dp18"
            android:drawableRight="@drawable/sort"
            android:fontFamily="@font/roboto_medium"
            android:paddingEnd="@dimen/dp6"
            android:paddingStart="@dimen/dp6"
            android:text="@string/company"
            android:textAllCaps="false"
            android:textColor="@color/menu_color"
            android:textSize="@dimen/sp14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/dividercolor_billingdetails"
            android:paddingEnd="@dimen/dp32"
            android:paddingStart="@dimen/dp32"
            android:paddingRight="@dimen/dp32"
            android:paddingLeft="@dimen/dp30"
            android:text="Products"
            android:textColor="@color/dividercolor_billingdetails" />

        <Button
            android:id="@+id/supplierButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableEnd="@drawable/sort"
            android:drawablePadding="@dimen/dp25"
            android:drawableRight="@drawable/sort"
            android:fontFamily="@font/roboto_medium"
            android:paddingEnd="@dimen/dp6"
            android:paddingStart="@dimen/dp6"
            android:text="@string/supplier"
            android:textAllCaps="false"
            android:textColor="@color/menu_color"
            android:textSize="@dimen/sp14" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/dividercolor_billingdetails"
            android:paddingEnd="@dimen/dp32"
            android:paddingStart="@dimen/dp30"
            android:text="Products"
            android:textColor="@color/dividercolor_billingdetails"
            android:paddingRight="@dimen/dp32"
            android:paddingLeft="@dimen/dp30" />

        <Button
            android:id="@+id/quantityButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableEnd="@drawable/sort"
            android:drawablePadding="@dimen/dp25"
            android:drawableRight="@drawable/sort"
            android:fontFamily="@font/roboto_medium"
            android:paddingEnd="@dimen/dp6"
            android:paddingStart="@dimen/dp6"
            android:text="@string/quantity_menu"
            android:textAllCaps="false"
            android:textColor="@color/menu_color"
            android:textSize="@dimen/sp14" />

    </LinearLayout>
</LinearLayout>