<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp80"
            app:srcCompat="@drawable/login_logo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp50"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp56"
            android:paddingRight="@dimen/dp56">

            <EditText
                android:id="@+id/editTextUserId"
                style="@style/AppLoginNewMainStyle"
                android:drawableLeft="@drawable/login_username"
                android:drawablePadding="@dimen/dp21"
                android:drawableStart="@drawable/login_username"
                android:hint="@string/userid"
                android:inputType="text"
                android:maxLength="100"
                android:paddingBottom="@dimen/dp13"
                 />
            <!--  Email Label -->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/viewlinecolor" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp38"
                android:layout_marginTop="@dimen/dp14">

                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/AppLoginNewMainStyle"
                    android:drawableLeft="@drawable/login_password"
                    android:drawablePadding="@dimen/dp21"
                    android:drawableStart="@drawable/login_password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/dp13"
                    android:paddingEnd="@dimen/dp28"
                    android:paddingRight="@dimen/dp28" />

                <ImageButton
                    android:id="@+id/showPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@color/transparent"
                    android:padding="@dimen/dp5"
                    android:src="@drawable/login_eyeoutline" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:background="@color/viewlinecolor" />

            <TextView
                android:id="@+id/btnOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginBottom="@dimen/dp23"
                android:layout_marginTop="@dimen/dp23"
                android:drawablePadding="@dimen/dp4"
                android:drawableRight="@drawable/enter"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/using_otp"
                android:visibility="invisible"
                android:textColor="@color/themecolor"
                android:textSize="@dimen/sp15" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:layout_marginLeft="@dimen/dp13"
                android:layout_marginRight="@dimen/dp13"
                android:background="@color/themecolor"
                android:gravity="center"
                android:text="@string/log_in"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/sp20"
                android:fontFamily="@font/roboto_medium" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

